# 2048-ai

./: .gitattributes  .gitignore  README.md  compare_agents.py  evaluate_agents.py  evaluate_dqn.py  main.py  play_trained_agent.py  pyproject.toml  run_experiment.py  run_random_agent.py  train_dqn.py
notebooks/: 2048_ai_colab_fluxo_unico.ipynb  2048_ai_colab_validacao.ipynb  2048_ai_dqn_training.ipynb
src/game2048/: __init__.py  comparison.py  constants.py  core.py  evaluation.py  game.py  terminal.py  visualization.py
src/game2048/agents/: __init__.py  base.py  heuristic_agent.py  random_agent.py
src/game2048/cli/: __init__.py  compare_agents.py  evaluate_agents.py  evaluate_dqn.py  run_experiment.py  train_dqn.py
src/game2048/learning/: __init__.py  dqn_agent.py  dqn_model.py  replay_memory.py  reward.py  state.py  training.py
tests/: __init__.py  test_comparison.py  test_core.py  test_dqn_model_optional.py  test_dqn_training_optional.py  test_evaluation.py  test_game.py  test_heuristic_agent.py  test_learning_state.py  test_random_agent.py  test_replay_memory.py  test_reward_shaping.py  test_run_experiment.py  test_visualization.py
