[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "game2048-ai"
version = "0.1.0"
description = "Motor do jogo 2048 e ferramentas de avaliação de agentes para experimentos de treino de IA."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Joao Batista Conceicao" }
]
dependencies = []

[project.scripts]
game2048-compare-agents = "game2048.cli.compare_agents:main"
game2048-evaluate-agents = "game2048.cli.evaluate_agents:main"
game2048-evaluate-dqn = "game2048.cli.evaluate_dqn:main"
game2048-run-experiment = "game2048.cli.run_experiment:main"
game2048-train-dqn = "game2048.cli.train_dqn:main"

[project.optional-dependencies]
learning = [
  "torch>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
